# esp-idf-ds3231

./: CMakeLists.txt  Makefile  README.md
main/: CMakeLists.txt  Kconfig.projbuild  ds3231.c  ds3231.h  i2cdev.c  i2cdev.h  i2cdev2.c  i2cdev_legacy.c  i2cdev_new.c  main.c
